--- a/src/App.css
+++ b/src/App.css
@@ -37,63 +37,108 @@
   }
 } */
 
-.App {
-  text-align: center;
+/* @import url("https://fonts.googleapis.com/css?family=Vibur&display=swap"); */
+
+:root {
+  --grid: 8px;
+  --pink: #fd3afd;
+  --title: #000;
+  --pinkDark: #690169;
+  --greyLight: #515b7d;
+  --black: #1d212e;
+  --white: #fff;
+  --borderWidth: 1px;
+  --borderRadius: 8px;
 }
 
-.App-header {
+body {
+  /* background: var(--white); */
+  /* font-family: "Vibur", cursive; */
+  user-select: none;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+.app {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 1.5vmin);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.products {
-  list-style: none;
-  padding-left: 0;
-}
-
-.products li {
+.columns {
   display: flex;
-  align-items: center;
-  border: solid 2px #d0d0d0;
-  border-radius: .2em;
-  padding: .5em .8em .5em .5em;
-  margin-bottom: 1em;
+  /* display: grid; */
+  /* grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); */
 }
 
-.products p {
-  max-width: none;
-  font-weight: bold;
+.column {
+  margin: calc(var(--grid) / 2);
+  border: var(--borderWidth) solid #aaa;
+  border-radius: var(--borderRadius);
+  /* background-color: #2a2f41; */
+  background-color: #ccc;
+}
+
+.column-title {
+  font-size: 22px;
+  color: var(--title);
+  /* text-shadow: 0px 0px 2px var(--pinkDark),
+    0px 0px 15px rgba(56, 48, 56, 0.5);   */
+  /* text-shadow: 0px 0px 2px var(--pinkDark),
+    0px 0px 15px rgba(0, 0, 0, 0.5); */
+  text-align: center;
+  text-transform: uppercase;
   margin: 0;
 }
 
-.products-thumb {
-  overflow: hidden;
-  flex-shrink: 0;
-  width: 2em;
-  height: 2em;
-  background-color: #e8e8e8;
-  padding: .5em;
-  margin-right: .5em;
+.column-title:hover {
+  /* text-shadow: 0px 0px 2px var(--pinkDark),
+    0px 0px 15px rgba(255, 110, 255, 0.8); */
+    opacity: .7;
 }
 
-.products-thumb img {
-  display: block;
-  width: 100%;
-  height: auto;
+.task-list {
+  /* this has no visible impact, but is in line with the absolute position spacing.
+  doing this ensures that dropping into an empty list will be in the correct visual position */
+  padding-left: var(--grid);
+  padding-right: var(--grid);
+  scrollbar-color: dark;
+}
+
+.task-list::-webkit-scrollbar {
+  width: 1em;
+}
+
+.task-list::-webkit-scrollbar-track {
+  background-color: var(--greyLight);
+  borderradius: var(--borderRadius);
+}
+
+.task-list::-webkit-scrollbar-thumb {
+  background-color: var(--title);
+}
+
+.item {
+  /* background: #333851; */
+  background: rgb(80, 78, 78);
+  border: var(--borderWidth) solid mediumpurple;
+  box-sizing: border-box;
+  border-radius: var(--borderRadius);
+  color: #cdd5ee;
+  font-size: 22px;
+  user-select: none;
+
+  /* center align text */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.item.is-dragging {
+  background: #515b7d;
+  border-color: #08ff08;
+  box-shadow: 0px 0px 2px rgb(8, 58, 30), 0px 0px 10px MediumSeaGreen;
 }
