--- a/src/App3.css
+++ b/src/App3.css
@@ -76,10 +76,9 @@ body {
 }
 
 .columns {
-  /* display: flex; */
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  display: flex;
+  /* display: grid; */
+  /* grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); */
 }
 
 .column {
@@ -91,7 +90,7 @@ body {
 }
 
 .column-title {
-  font-size: 19px;
+  font-size: 22px;
   color: var(--title);
   /* text-shadow: 0px 0px 2px var(--pinkDark),
     0px 0px 15px rgba(56, 48, 56, 0.5);   */
@@ -111,8 +110,8 @@ body {
 .task-list {
   /* this has no visible impact, but is in line with the absolute position spacing.
   doing this ensures that dropping into an empty list will be in the correct visual position */
-  /* padding-left: var(--grid); */
-  /* padding-right: var(--grid); */
+  padding-left: var(--grid);
+  padding-right: var(--grid);
   scrollbar-color: dark;
 }
 
@@ -136,7 +135,7 @@ body {
   box-sizing: border-box;
   border-radius: var(--borderRadius);
   color: #cdd5ee;
-  font-size: 19px;
+  font-size: 22px;
   user-select: none;
 
   /* center align text */
