--- a/src/App.css
+++ b/src/App.css
@@ -1,66 +1,9 @@
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
-
-
-
-
-
-
-/* kim 3 */
-/* @import url("https://fonts.googleapis.com/css?family=Vibur&display=swap"); */
-
 :root {
-  /* --grid: 8px; */
-  --grid: 3px;
-  --pink: #fd3afd;
-  --title: #000;
-  --pinkDark: #690169;
   --greyLight: #aaa;
-  --black: #1d212e;
-  --white: #fff;
-  --borderWidth: 1px;
   --borderRadius: 8px;
 }
 
 body {
-  /* background: var(--white); */
-  /* font-family: "Vibur", cursive; */
   user-select: none;
 }
 
@@ -71,51 +14,23 @@ body {
 }
 .app {
   display: flex;
-  /* flex-direction: column; */
-  /* align-items: center; */
 }
 
 .columns {
-  /* display: flex; */
   width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 .column {
-  /* margin: calc(var(--grid) / 2); */
   margin: 1px;
-  /* border: var(--borderWidth) solid #aaa; */
-  /* border-radius: var(--borderRadius); */
-  /* background-color: #2a2f41; */
-  /* background-color: #ccc; */
 }
 
-.column-title {
-  /* font-size: 19px; */
-  /* color: var(--title); */
-  /* text-shadow: 0px 0px 2px var(--pinkDark),
-    0px 0px 15px rgba(56, 48, 56, 0.5);   */
-  /* text-shadow: 0px 0px 2px var(--pinkDark),
-    0px 0px 15px rgba(0, 0, 0, 0.5); */
-  /* text-align: center; */
-  /* text-transform: uppercase; */
-  /* margin: 0; */
-}
+.column-title {}
 
-.column-title:hover {
-  /* text-shadow: 0px 0px 2px var(--pinkDark),
-    0px 0px 15px rgba(255, 110, 255, 0.8); */
-    /* opacity: .7; */
-}
+.column-title:hover {}
 
-.task-list {
-  /* this has no visible impact, but is in line with the absolute position spacing.
-  doing this ensures that dropping into an empty list will be in the correct visual position */
-  /* padding-left: var(--grid); */
-  /* padding-right: var(--grid); */
-  /* scrollbar-color: dark; */
-}
+.task-list {}
 
 .task-list::-webkit-scrollbar {
   width: 1em;
@@ -127,21 +42,11 @@ body {
 }
 
 .task-list::-webkit-scrollbar-thumb {
-  /* background-color: var(--title); */
   background-color: rgb(139, 139, 139);
 }
 
 .item {
-  /* background: #333851; */
-  /* background: rgb(80, 78, 78); */
-  /* background-color: #aaa!important; */
-  /* border: var(--borderWidth) solid mediumpurple; */
-  /* box-sizing: border-box; */
-  /* border-radius: var(--borderRadius); */
-  /* color: #cdd5ee; */
-  /* font-size: 19px; */
-  /* user-select: none; */
-
+  user-select: none;
   /* center align text */
   /* display: flex; */
   /* justify-content: center; */
@@ -153,6 +58,7 @@ body {
   background-color: rgb(112, 112, 112)!important;
   box-shadow: 0px 0px 2px rgb(8, 58, 30), 0px 0px 10px MediumSeaGreen;
 }
+
 .item span::first-letter {
   text-transform: uppercase;
 }
