--- a/src/App.css
+++ b/src/App.css
@@ -55,8 +55,10 @@ body {
 
 .item.is-dragging {
   color: #fff!important;
-  background-color: rgb(112, 112, 112)!important;
+  /* background-color: rgb(112, 112, 112)!important; */
+  background-color: lightgreen!important;
   box-shadow: 0px 0px 2px rgb(8, 58, 30), 0px 0px 10px MediumSeaGreen;
+  /* box-shadow: 0px 0px 2px rgb(189, 255, 217), 0px 0px 10px MediumSeaGreen; */
 }
 
 .item span::first-letter {
