--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,8 @@ body {
 
 .item {
   user-select: none;
+  /* border-left: 1px solid #aaa!important; */
+  border-right: 1px solid #aaa!important;
   /* background-color: lightgrey; */
   /* transition: background-color .4s, */
 
@@ -99,8 +101,9 @@ body {
 .item.is-dragging {
   color: #fff!important;
   /* background-color: rgb(112, 112, 112)!important; */
-  background-color: lightgreen!important;
-  box-shadow: 0px 0px 2px rgb(8, 58, 30), 0px 0px 10px MediumSeaGreen;
+  /* background-color: lightgreen!important; */
+  background-color: #a0a0ff!important;
+  /* box-shadow: 0px 0px 2px rgb(8, 58, 30), 0px 0px 10px MediumSeaGreen; */
   /* box-shadow: 0px 0px 2px rgb(160, 160, 255), 0px 0px 10px MediumSeaGreen; */
 }
 
