--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,13 @@ body {
   box-sizing: border-box;
 }
 
+.fake-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .app {
   display: flex;
   max-width: 1440px;
@@ -51,6 +58,7 @@ body {
 
 .column {
   margin: 1px;
+  background-color: rgb(221, 221, 221);
 }
    
 .task-list::-webkit-scrollbar {
